parser/src/parser/snapshots/enderpy__parser__parser__tests__lambda.snap
---
source: src/parser/parser.rs
description: "lambda: a"
---
Module {
    node: Node {
        start: 0,
        end: 9,
    },
    body: [
        ExpressionStatement(
            Lambda(
                Lambda {
                    node: Node {
                        start: 0,
                        end: 9,
                    },
                    args: Arguments {
                        node: Node {
                            start: 6,
                            end: 6,
                        },
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kw_defaults: [],
                        kwarg: None,
                        defaults: [],
                    },
                    body: Name(
                        Name {
                            node: Node {
                                start: 8,
                                end: 9,
                            },
                            id: "a",
                        },
                    ),
                },
            ),
        ),
    ],
}
