parser/src/parser/snapshots/enderpy__parser__parser__tests__parse_assert_stmt-2.snap
---
source: src/parser/parser.rs
description: "assert a, b"
---
Module {
    node: Node {
        start: 0,
        end: 11,
    },
    body: [
        Assert(
            Assert {
                node: Node {
                    start: 0,
                    end: 11,
                },
                test: Name(
                    Name {
                        node: Node {
                            start: 7,
                            end: 8,
                        },
                        id: "a",
                    },
                ),
                msg: Some(
                    Name(
                        Name {
                            node: Node {
                                start: 10,
                                end: 11,
                            },
                            id: "b",
                        },
                    ),
                ),
            },
        ),
    ],
}
