parser/src/parser/snapshots/enderpy__parser__parser__tests__parse_assert_stmt.snap
---
source: src/parser/parser.rs
description: assert a
---
Module {
    node: Node {
        start: 0,
        end: 8,
    },
    body: [
        Assert(
            Assert {
                node: Node {
                    start: 0,
                    end: 8,
                },
                test: Name(
                    Name {
                        node: Node {
                            start: 7,
                            end: 8,
                        },
                        id: "a",
                    },
                ),
                msg: None,
            },
        ),
    ],
}
